<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.RegisterUserActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/register_activity_logo"
        style="@style/splash_screen_image_200"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:contentDescription="@string/lgbt_help_logo_definition"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/register_activity_person_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/register_activity_person_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/grey_500"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_person_80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_activity_logo"
        app:shapeAppearanceOverlay="@style/rounded_image_view_rounded" />

    <EditText
        android:id="@+id/register_activity_name_input"
        style="@style/default_input"
        android:layout_width="0dp"
        android:drawableStart="@drawable/ic_baseline_person_pin_24"
        android:hint="@string/edittext_name_hint"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_activity_person_image" />

    <EditText
        android:id="@+id/register_activity_email"
        style="@style/default_input"
        android:layout_width="0dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:hint="@string/edittext_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_activity_name_input" />

    <EditText
        android:id="@+id/register_activity_pwd"
        style="@style/default_input"
        android:layout_width="0dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/edittext_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_activity_email" />

    <EditText
        android:id="@+id/register_activity_pwd_confirmation"
        style="@style/default_input"
        android:layout_width="0dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/pwd_confirmation"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_activity_pwd" />

    <Button
        android:id="@+id/register_activity_submit_issue"
        style="@style/main_default_button"
        android:text="@string/btn_save"
        app:layout_constraintBottom_toTopOf="@id/register_activity_cancel_issue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_activity_pwd_confirmation"
        app:layout_constraintVertical_bias=".9" />

    <Button
        android:id="@+id/register_activity_cancel_issue"
        style="@style/default_outlined_button"
        android:text="@string/btn_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_activity_pwd_confirmation"
        app:layout_constraintVertical_bias=".9" />

    <ProgressBar
        android:id="@+id/register_activity_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_activity_pwd_confirmation"
        app:layout_constraintVertical_bias=".7" />

</androidx.constraintlayout.widget.ConstraintLayout>