<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_parent_fragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.HomeFragment"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/home_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/home_main_logo"
            android:src="@mipmap/ic_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_options_parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_logo">

            <TextView
                android:id="@+id/home_politics_button"
                style="@style/home_options"
                android:text="@string/home_politicts_option_label"
                app:layout_constraintEnd_toStartOf="@id/home_works_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/home_works_button"
                style="@style/home_options"
                android:text="@string/home_works_option_label"
                app:layout_constraintEnd_toStartOf="@id/home_ong_button"
                app:layout_constraintStart_toEndOf="@+id/home_politics_button"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/home_ong_button"
                style="@style/home_options"
                android:text="@string/home_ong_option_label"
                app:layout_constraintEnd_toStartOf="@id/home_podcast_button"
                app:layout_constraintStart_toEndOf="@+id/home_works_button"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/home_podcast_button"
                style="@style/home_options"
                android:text="@string/home_podcast_option_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/home_ong_button"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_news_recycler_list"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_options_parent"
            tools:listitem="@layout/news_card_item" />

        <ListView
            android:id="@+id/home_post_list_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_news_recycler_list"
            tools:listitem="@layout/post_card" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>